# JniOpenSSLTestApp

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/jnitestapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/hellojni/: HelloJni.java
app/src/main/java/com/example/jnitestapp/: MainActivity.java  Util.java
app/src/main/java/com/example/myjnitest/: MyJniTest.java
app/src/main/jni/: my-jni-test.c  my-jni-test.h
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/jnitestapp/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
